--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,14 @@
 <!-- Put your HTML HERE, make sure to connect your style.css sheet -->
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<div class="foo3">div 4</div>
+	<div class="foo2">div 2</div>
+	<div class="foo2" id ="yo">div 3</div>
+	<div class="foo">div 1</div>
+</body>
+</html>
