--- a/first/index.html
+++ b/first/index.html
@@ -6,9 +6,10 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="foo3">div 4</div>
-	<div class="foo2">div 2</div>
-	<div class="foo2" id ="yo">div 3</div>
-	<div class="foo">div 1</div>
+	<div class="foo3"></div>
+	<div class="foo2"></div>
+	<div class="foo2" id ="yo"></div>
+	<!-- <span class="foo"></span> -->
+	<footer></footer>
 </body>
 </html>
