everything except square

--- a/second/index.html
+++ b/second/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="one"></div>
+	<div class="one">;l</div>
 	<div class="two"></div>
 	<div class="three">
 		<div class="imgplace">
